[tool.poetry]
name = "vehicle-reservation-slack-bot"
version = "0.1.0"
description = ""
authors = ["Jeff <foggeydoughtnut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-Admin = "^1.6.0"
SQLAlchemy = "^1.4.40"
Flask-Login = "^0.6.2"
slackeventsapi = "^3.0.1"
slack-sdk = "^3.18.1"
requests = "^2.28.1"
msal = "^1.18.0"
python-dotenv = "^0.20.0"
Flask-SQLAlchemy = "^2.5.1"
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
requests-mock = "^1.9.3"
coverage = "^6.4.4"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
